--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
             srcset="">
         <p class="lead">Eu sou Dionatan</p>
         <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p>Sou Engenheiro de Software e Professor. 
+        Ensino pensamento computacional e programação para 
+        estudantes do Ensino Médio.
+        Atuo também como professor no curso técnico de
+        Desenvolvimento de Sistemas e como professor
+        universitário no curso de Engenharia de Software
+        na faculdade Campo Real.
+        Ensino sobre pensamento computacional usando HTML, 
+        CSS e JavaScript.
+        Veja os projetos que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
             <p class="badge bg-secondary">JavaScript</p>
             <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">FREE FIRE</p>
         </div>
     </header>
     <main class="container mt-5">
