--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="76927939ad6134c1b5b0fa472803ca4b.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Dionatan</p>
         <h1>Eu ensino Programação</h1>
@@ -28,7 +28,7 @@
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
+            <p class="badge bg-secondary">Boa Comunicação</p>
             <p class="badge bg-secondary">JavaScript</p>
             <p class="badge bg-secondary">Scratch</p>
             <p class="badge bg-secondary">FREE FIRE</p>
